rename endpoints to make more sense
