# static/swagger.json
@@ -13,7 +13,7 @@
     }
   ],
   "paths": {
-    "/count/items": {
+    "/items/count": {
       "get": {
         "tags": ["items"],
         "summary": "Count of Items",
@@ -34,7 +34,7 @@
         }
       }
     },
-    "/most_recent/items": {
+    "/items/most_recent": {
       "get": {
         "tags": ["items"],
         "summary": "Most recent items",
@@ -129,7 +129,7 @@
       }
     },
 
-    "/lazy/most_recent/items": {
+    "/items/most_recent_lazy": {
       "get": {
         "tags": ["items"],
         "summary": "Most recent items for lazy loading",
@@ -232,7 +232,7 @@
         }
       }
     },
-    "/n/items": {
+    "/items/n": {
       "get": {
         "tags": ["items"],
         "summary": "Get N number of items",
@@ -326,7 +326,7 @@
         }
       }
     },
-    "/fuzzy/items": {
+    "/items/fuzzy_search": {
       "get": {
         "tags": ["items"],
         "summary": "Fuzzy search item titles",
@@ -441,7 +441,7 @@
         }
       }
     },
-    "/distance/items": {
+    "/items/distance": {
       "get": {
         "tags": ["items"],
         "summary": "Items within distance",
@@ -645,7 +645,7 @@
         }
       }
     },
-    "/item/category": {
+    "/items/category": {
       "get": {
         "tags": ["items"],
         "summary": "Items by Category",
@@ -739,7 +739,7 @@
         }
       }
     },
-    "/user/items": {
+    "/items/user": {
       "get": {
         "tags": ["items"],
         "summary": "Items by User",
@@ -834,7 +834,7 @@
       }
     },
 
-    "/user/getinfo": {
+    "/users/getinfo": {
       "get": {
         "tags": ["users"],
         "summary": "User Info",
@@ -895,7 +895,7 @@
       }
     },
 
-    "/items/categories": {
+    "/categories": {
       "get": {
         "tags": ["categories"],
         "summary": "List of Categories",
@@ -1095,7 +1095,7 @@
       }
     },
 
-    "/user/update": {
+    "/users/update": {
       "post": {
         "tags": ["users"],
         "summary": "Update user",
